# smart_aircon

./: .gitignore
src/: .gitignore  README.md  camera.py  main.py  pyproject.toml  temperature.py
src/recognition/: recognize.py  register.py
src/script/: temperature_check.py
typings/gpiozero/: __init__.pyi
typings/onnxruntime/: __init__.pyi
